T928 suppress native access launcher warning